[gd_scene load_steps=3 format=3 uid="uid://db3o8r0x1g4r6"]

[ext_resource type="Theme" uid="uid://c7u2g7u3nqj0w" path="res://game/ui/theme/ui_theme.tres" id="1_theme"]
[ext_resource type="Script" path="res://game/ui/player_menu/inventory/item_popover.gd" id="2_script"]

[node name="ItemPopover" type="PanelContainer"]
visible = false
top_level = true
z_index = 100
mouse_filter = 2
theme = ExtResource("1_theme")
script = ExtResource("2_script")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Header" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Icon" type="TextureRect" parent="Margin/VBox/Header"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="Margin/VBox/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "Item"

[node name="DescLabel" type="Label" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
autowrap_mode = 3
text = " "

[node name="MetaLabel" type="Label" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
modulate = Color(1, 1, 1, 0.8)
text = "Slot: -"

[node name="ValueLabel" type="Label" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
modulate = Color(1, 1, 1, 0.85)
text = "Value: -"

[node name="ActionLabel" type="Label" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
modulate = Color(1, 1, 1, 0.85)
text = "Enter: Equip"
